# firebird-dump-schema

./: .env.example  .gitignore  CLAUDE.md  README.md  README.ru.md  clean_system.sh  fetch_schema.sh  main.sh  parser.awk  pyinstaller_entry.py  pyproject.toml  split_objects.sh  system_procedures.list  utils.sh
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: _config.yml  index.md  ru.md
fbschema/: __init__.py  __main__.py  categories.py  cli.py  config.py  db.py  log.py  model.py  render.py  selection.py  timeout.py  writer.py
tests/: fakes.py  test_categories.py  test_cli.py  test_config.py  test_db.py  test_render.py  test_selection.py  test_writer.py
