[project]
name = "firebird-dump-schema"
version = "0.1.0"
description = "Извлечение схемы Firebird в дерево «один объект — один файл»"
requires-python = ">=3.11"
dependencies = [
    "firebird-driver>=1.10",
    "firebird-lib>=1.5",
    "python-dotenv>=1.0",
]

[project.scripts]
fb-dump-schema = "fbschema.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fbschema"]

[tool.uv]
# Внутренний Step CA обслуживает *.reid.local — доверяем системному хранилищу
# сертификатов вместо встроенного набора webpki.
native-tls = true

# Внутренний индекс (devpi). Наследует upstream PyPI, поэтому резолвит и
# приватные колёса, и публичные пакеты. default = true делает его индексом
# по умолчанию вместо pypi.org.
[[tool.uv.index]]
name = "reid"
url = "https://pypi.reid.local/reid21/dev/+simple/"
default = true
